; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_InitLightAttn.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_InitLightAttn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.__gx_litobj = type { i8*, i8*, i8*, i8*, i8*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GX_InitLightAttn(i32* %0, i8* %1, i8* %2, i8* %3, i8* %4, i8* %5, i8* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca %struct.__gx_litobj*, align 8
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i8* %2, i8** %10, align 8
  store i8* %3, i8** %11, align 8
  store i8* %4, i8** %12, align 8
  store i8* %5, i8** %13, align 8
  store i8* %6, i8** %14, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = bitcast i32* %16 to %struct.__gx_litobj*
  store %struct.__gx_litobj* %17, %struct.__gx_litobj** %15, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = load %struct.__gx_litobj*, %struct.__gx_litobj** %15, align 8
  %20 = getelementptr inbounds %struct.__gx_litobj, %struct.__gx_litobj* %19, i32 0, i32 5
  store i8* %18, i8** %20, align 8
  %21 = load i8*, i8** %10, align 8
  %22 = load %struct.__gx_litobj*, %struct.__gx_litobj** %15, align 8
  %23 = getelementptr inbounds %struct.__gx_litobj, %struct.__gx_litobj* %22, i32 0, i32 4
  store i8* %21, i8** %23, align 8
  %24 = load i8*, i8** %11, align 8
  %25 = load %struct.__gx_litobj*, %struct.__gx_litobj** %15, align 8
  %26 = getelementptr inbounds %struct.__gx_litobj, %struct.__gx_litobj* %25, i32 0, i32 3
  store i8* %24, i8** %26, align 8
  %27 = load i8*, i8** %12, align 8
  %28 = load %struct.__gx_litobj*, %struct.__gx_litobj** %15, align 8
  %29 = getelementptr inbounds %struct.__gx_litobj, %struct.__gx_litobj* %28, i32 0, i32 2
  store i8* %27, i8** %29, align 8
  %30 = load i8*, i8** %13, align 8
  %31 = load %struct.__gx_litobj*, %struct.__gx_litobj** %15, align 8
  %32 = getelementptr inbounds %struct.__gx_litobj, %struct.__gx_litobj* %31, i32 0, i32 1
  store i8* %30, i8** %32, align 8
  %33 = load i8*, i8** %14, align 8
  %34 = load %struct.__gx_litobj*, %struct.__gx_litobj** %15, align 8
  %35 = getelementptr inbounds %struct.__gx_litobj, %struct.__gx_litobj* %34, i32 0, i32 0
  store i8* %33, i8** %35, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
